facil.io/lib/facil/http/http.h


typedef struct http_settings_s http_settings_s;
typedef struct {
  struct {
    void *vtbl;
    uintptr_t flag;
    FIOBJ out_headers;
  } private_data;
  struct timespec received_at;
  FIOBJ method;
  FIOBJ status_str;
  FIOBJ version;
  uintptr_t status;
  FIOBJ path;
  FIOBJ query;
  FIOBJ headers;
  FIOBJ cookies;
  FIOBJ params;
  FIOBJ body;
  void *udata;
} http_s;
int http_send_body(http_s *h, void *data, uintptr_t length);
typedef struct http_pause_handle_s http_pause_handle_s;
void http_pause(http_s *h, void (*task)(http_pause_handle_s *http));
void http_resume(http_pause_handle_s *http, void (*task)(http_s *h),
                 void (*fallback)(void *udata));
struct http_settings_s {
  void (*on_request)(http_s *request);
  void (*on_upgrade)(http_s *request, char *requested_protocol, size_t len);
  void (*on_response)(http_s *response);
  void (*on_finish)(struct http_settings_s *settings);
  void *udata;
  const char *public_folder;
  size_t public_folder_length;
  size_t max_header_size;
  size_t max_body_size;
  intptr_t max_clients;
  void *tls;
  intptr_t reserved1;
  intptr_t reserved2;
  intptr_t reserved3;
  size_t ws_max_msg_size;
  uint8_t timeout;
  uint8_t ws_timeout;
  uint8_t log;
  uint8_t is_client;
};