facil.io/lib/facil/fio.h


typedef struct fio_str_info_s {
  size_t capa; 
  size_t len;  
  char *data;  
} fio_str_info_s;
typedef struct {
  fio_str_info_s scheme;
  fio_str_info_s user;
  fio_str_info_s password;
  fio_str_info_s host;
  fio_str_info_s port;
  fio_str_info_s path;
  fio_str_info_s query;
  fio_str_info_s target;
} fio_url_s;
fio_url_s fio_url_parse(const char *url, size_t length);
struct fio_start_args {
  int16_t threads;
  int16_t workers;
};
void fio_start(struct fio_start_args args);
#define fio_start(...) fio_start((struct fio_start_args){__VA_ARGS__})
void fio_stop(void);
void fio_uuid_link(intptr_t uuid, void *obj, void (*on_close)(void *obj));
int fio_defer(void (*task)(void *, void *), void *udata1, void *udata2);
int fio_run_every(size_t milliseconds, size_t repetitions, void (*task)(void *),
                  void *arg, void (*on_finish)(void *));
typedef enum {
  FIO_CALL_ON_INITIALIZE,
  FIO_CALL_PRE_START,
  FIO_CALL_BEFORE_FORK,
  FIO_CALL_AFTER_FORK,
  FIO_CALL_IN_CHILD,
  FIO_CALL_IN_MASTER,
  FIO_CALL_ON_START,
  FIO_CALL_ON_IDLE,
  FIO_CALL_ON_SHUTDOWN,
  FIO_CALL_ON_FINISH,
  FIO_CALL_ON_PARENT_CRUSH,
  FIO_CALL_ON_CHILD_CRUSH,
  FIO_CALL_AT_EXIT,
  FIO_CALL_NEVER
} callback_type_e;
void fio_state_callback_add(callback_type_e, void (*func)(void *), void *arg);
int fio_state_callback_remove(callback_type_e, void (*func)(void *), void *arg);
typedef struct FIO_NAME(s) FIO_NAME(s);
FIO_FUNC inline size_t FIO_NAME(count)(FIO_NAME(s) * ary);
FIO_FUNC inline size_t FIO_NAME(capa)(FIO_NAME(s) * ary);
FIO_FUNC inline size_t FIO_NAME(each)(FIO_NAME(s) * ary, size_t start_at,
                                      int (*task)(FIO_ARY_TYPE pt, void *arg),
                                      void *arg);
FIO_FUNC inline size_t FIO_NAME(count)(FIO_NAME(s) * ary) {
  return ary ? (ary->end - ary->start) : 0;
}
FIO_FUNC inline size_t FIO_NAME(capa)(FIO_NAME(s) * ary) {
  return ary ? ary->capa : 0;
}
FIO_FUNC inline size_t FIO_NAME(each)(FIO_NAME(s) * ary, size_t start_at,
                                      int (*task)(FIO_ARY_TYPE pt, void *arg),
                                      void *arg) {
  const size_t count = FIO_NAME(count)(ary);
  if (!count || start_at >= count) {
    return count;
  }
  while (start_at < count &&
         task(ary->arry[ary->start + (start_at++)], arg) != -1)
    ;
  return start_at;
}
typedef struct {
  FIO_SET_KEY_TYPE key;
  FIO_SET_OBJ_TYPE obj;
} FIO_NAME(couplet_s);
typedef struct FIO_NAME(s) FIO_NAME(s);
FIO_FUNC inline size_t FIO_NAME(count)(const FIO_NAME(s) * set);
FIO_FUNC inline size_t FIO_NAME(capa)(const FIO_NAME(s) * set);
FIO_FUNC inline size_t FIO_NAME(count)(const FIO_NAME(s) * set) {
  return (size_t)set->count;
}
FIO_FUNC inline size_t FIO_NAME(capa)(const FIO_NAME(s) * set) {
  return (size_t)set->capa;
}